# Hangman-Game-with-SFML

./: .gitignore  CMakeLists.txt  README.md
Content/: GameConfig.json
Content/Words/: Easy.txt  Extreme.txt  Hard.txt  Medium.txt
Include/: AudioManager.h  Cursor.h  Difficulty.h  DifficultyMenu.h  DrawHangman.h  Game.h  GameConfig.h  GameState.h  Hangman.h  Input.h  MainMenu.h  MusicState.h  OptionsActions.h  OptionsMenu.h  PauseMenu.h  PlayAgainMenu.h  PlayScreen.h  Word.h
Source/: AudioManager.cpp  Cursor.cpp  DifficultyMenu.cpp  DrawHangman.cpp  Game.cpp  GameConfig.cpp  Hangman.cpp  Input.cpp  Main.cpp  MainMenu.cpp  OptionsMenu.cpp  PauseMenu.cpp  PlayAgainMenu.cpp  PlayScreen.cpp  Word.cpp
